Implemented POST /collections and GET /collections/{uuid}
