# apps/api/src/lambdas/dynamic.ts
@@ -12,6 +12,7 @@ import errorToResult from "../errors/errorToResult"
 import CORS_HEADERS from "../headers/responses/CORS_HEADERS"
 import TEMPORARY_HEADERS from "../headers/responses/TEMPORARY_HEADERS"
 import getAutocomplete from "../operations/getAutocomplete"
+import getCollection from "../operations/getCollection"
 import getContributor from "../operations/getContributor"
 import getContributors from "../operations/getContributors"
 import getImage from "../operations/getImage"
@@ -21,6 +22,7 @@ import getNode from "../operations/getNode"
 import getNodeLineage from "../operations/getNodeLineage"
 import getNodes from "../operations/getNodes"
 import getResolveObject from "../operations/getResolveObject"
+import postCollection from "../operations/postCollection"
 import postResolveObjects from "../operations/postResolveObjects"
 import { PgClientService } from "../services/PgClientService"
 import getEmbedParameters from "./parameters/getEmbedParameters"
@@ -28,9 +30,10 @@ import getParameters from "./parameters/getParameters"
 import getUUID from "./parameters/getUUID"
 import PG_CLIENT_SERVICE from "./services/PG_CLIENT_SERVICE"
 const SERVICE: PgClientService = PG_CLIENT_SERVICE
-const NODE_FILTER_PARAMETERS: ReadonlyArray<keyof NodeListParameters> = ["filter_name"]
+const NODE_FILTER_PARAMETERS: ReadonlyArray<keyof NodeListParameters> = ["filter_collection", "filter_name"]
 const IMAGE_FILTER_PARAMETERS: ReadonlyArray<keyof ImageListParameters> = [
     "filter_clade",
+    "filter_collection",
     "filter_contributor",
     "filter_license_by",
     "filter_license_nc",
@@ -55,6 +58,24 @@ const route: (event: APIGatewayProxyEvent) => Promise<APIGatewayProxyResult> = (
                         {
                             ...getParameters(event.headers, ["accept"]),
                             ...getParameters(event.queryStringParameters, ["build", "query"]),
+                        },
+                        SERVICE,
+                    )
+                }
+                default: {
+                    throw create405()
+                }
+            }
+        }
+        case "/collections":
+        case "/collections/": {
+            switch (event.httpMethod) {
+                case "GET": {
+                    return postCollection(
+                        {
+                            body: event.body ?? undefined,
+                            encoding: event.isBase64Encoded ? "base64" : "utf8",
+                            ...getParameters(event.headers, ["accept"]),
                         },
                         SERVICE,
                     )
@@ -146,6 +167,22 @@ const route: (event: APIGatewayProxyEvent) => Promise<APIGatewayProxyResult> = (
                 default: {
                     throw create405()
                 }
+            }
+        }
+    }
+    if (path.startsWith("/collections/")) {
+        switch (event.httpMethod) {
+            case "GET": {
+                return getCollection(
+                    {
+                        ...getParameters(event.headers, ["accept", "content-type"]),
+                        ...getUUID(event.pathParameters),
+                    },
+                    SERVICE,
+                )
+            }
+            default: {
+                throw create405()
             }
         }
     }
